--- a/mainPage/static/mainPage/style.css
+++ b/mainPage/static/mainPage/style.css
@@ -27,7 +27,7 @@ h1{
 .add{
     height:150px;
 }
-.login, .news, .lostNFound{
+.login, .login2, .news, .lostNFound{
     width: 25%;
     border :1px solid black;
     margin-top: 5px;
@@ -36,6 +36,12 @@ h1{
 }
 .news, .lostNFound{
     height:250;
+}
+.login2 img, h4{
+    display:inline;
+}
+.notice{
+    border-top: 1px solid black;
 }
 .lostNFound{
     overflow-y: scroll;
@@ -55,9 +61,10 @@ h1{
     height:150px;
     display:inline-table;
 }
-.marketItem img, .lostItem img{
+.img{
     width:50px;
     height:50px;
+    vertical-align:middle;
 }
 .Logo{
     height:200px;
