--- a/boards/templates/boards/boardRewrite.html
+++ b/boards/templates/boards/boardRewrite.html
@@ -1,21 +1,15 @@
+{% extends 'mainPage/basePage.html' %}
+{% block content %}
 <!DOCTYPE html>
 <html>
     <head>
+    {% load static %}
+    <link rel="stylesheet" type="text/css" href="{% static 'boards/rewriteStyle.css'%}">   
         <meta charset="UTF-8">
         <title> boardCreate </title>
-        <style>
-            .contents{
-                padding-top:1%;
-                border-top:1px solid black;
-            }
-
-        </style>
-
-
     </head>
 
     <body>
-       <h1><a href="/boards/"> 한우리</a><h1>
        <h2> 감자밭 </h2>
        <h4> 다양한 주제를 공유하는 남송리 대표 자유게시판입니다. </h4>
        <p> 제목 : 오늘 용교수님 컴구 </p>
@@ -26,3 +20,4 @@
     </body>
 
 <html>
+{% endblock %}
