--- a/boards/templates/boards/boardCreate.html
+++ b/boards/templates/boards/boardCreate.html
@@ -1,14 +1,15 @@
+{% extends 'mainPage/basePage.html' %}
+{% block content %}
 <!DOCTYPE html>
 <html>
     <head>
+    {% load static %}
+    <link rel="stylesheet" type="text/css" href="{% static 'boards/createStyle.css'%}">   
         <meta charset="UTF-8">
         <title> boardCreate </title>
-
-
     </head>
 
     <body>
-       <h1><a href="/boards/"> 한우리</a><h1>
        <h2> 감자밭 </h2>
        <h4> 다양한 주제를 공유하는 남송리 대표 자유게시판입니다. </h4>
 
@@ -19,3 +20,4 @@
     </body>
 
 <html>
+{% endblock %}
