--- a/mainPage/templates/mainPage/basePage.html
+++ b/mainPage/templates/mainPage/basePage.html
@@ -2,7 +2,7 @@
 <link rel="stylesheet" type="text/css" href="{% static 'mainPage/style.css' %}">
 <html>
     <head>
-        <title>Base Page</title>
+        <title>한우리-우리들의 이야기</title>
     </head>
     <body>
         <img src="{% static 'mainPage/images/HUS_Logo_1.png' %}" class="Logo" id="top"/>
@@ -50,7 +50,8 @@
         </div>
         </aside>
         <section class="mainContent">
-
+        {% block content %}
+        {% endblock %}
         </section>
         <footer class="footer">
         <div class="centerBox">
