updated login widget

--- a/mainPage/templates/mainPage/mainPageTemplate.html
+++ b/mainPage/templates/mainPage/mainPageTemplate.html
@@ -72,8 +72,8 @@
         <section class="login">
             <h2>로그인</h2>
             <button type="submit"><a href="{% url 'join:clause' %}">로그인</a></button>
-            <input type="text" value="hisnet ID">
-            <input type="text" value="hisnet PW">
+            <input type="text" placeholder="hisnet ID">
+            <input type="text" placeholder="hisnet PW">
         </section>
         <section class="bestFive">
             <h2>Best 게시물</h2>
