한동정보 링크 수정

--- a/mainPage/templates/mainPage/basePage.html
+++ b/mainPage/templates/mainPage/basePage.html
@@ -57,10 +57,10 @@
                     </td>
                     <td>
                         <ul>
-                        <li>SEAL</li>
-                        <li>아이택시</li>
-                        <li>총학생회</li>
-                        <li>총동연회</li>
+                        <li><a href="http://seal.handong.edu/">SEAL</a></li>
+                        <li><a href="http://itaxi.handong.edu/">아이택시</a></li>
+                        <li><a href="http://stu.handong.edu/">총학생회</a></li>
+                        <li><a href="http://www.dongari.or.kr/handongdae/file/">총동연회</a></li>
                         </ul>
                     </td>
                 </tr>
@@ -99,10 +99,10 @@
             </ul>
             <li>한동정보</li>
             <ul>
-                <li>SEAL</li>
-                <li>아이택시</li>
-                <li>총학생회</li>
-                <li>총동연회</li>
+                <li><a href="http://seal.handong.edu/">SEAL</a></li>
+                <li><a href="http://itaxi.handong.edu/">아이택시</a></li>
+                <li><a href="http://stu.handong.edu/">총학생회</a></li>
+                <li><a href="http://www.dongari.or.kr/handongdae/file/">총동연회</a></li>
             </ul>
             </ul>
         <div class="sideMenuBottomIcons">
