lost and found 통합

--- a/lostAndFound/templates/lostAndFound/create.html
+++ b/lostAndFound/templates/lostAndFound/create.html
@@ -1,3 +1,5 @@
+{% extends 'mainPage/basePage.html' %}
+{% block content %}
 {% load static %}
 <!DOCTYPE html>
 <html>
@@ -37,3 +39,4 @@
        <button><a href="/lostAndFound/">취소</a></button>
     </body>
 </html>
+{% endblock %}
