--- a/lostAndFound/templates/lostAndFound/delete.html
+++ b/lostAndFound/templates/lostAndFound/delete.html
@@ -1,3 +1,5 @@
+{% extends 'mainPage/basePage.html' %}
+{% block content %}
 {% load static %}
 <!DOCTYPE html>
 <html>
@@ -21,3 +23,4 @@
 
 
 </html>
+{% endblock %}
