--- a/lostAndFound/templates/lostAndFound/detail.html
+++ b/lostAndFound/templates/lostAndFound/detail.html
@@ -1,3 +1,5 @@
+{% extends 'mainPage/basePage.html' %}
+{% block content %}
 {% load static %}
 <!DOCTYPE html>
 <html>
@@ -66,3 +68,4 @@
         <button><a href="/lostAndFound/">목록</a></button>
     </body>
 </html>
+{% endblock %}
