--- a/lostAndFound/templates/lostAndFound/list.html
+++ b/lostAndFound/templates/lostAndFound/list.html
@@ -1,3 +1,5 @@
+{% extends 'mainPage/basePage.html' %}
+{% block content %}
 {% load static %}
 <!DOCTYPE html>
 <html>
@@ -71,7 +73,7 @@
 
     </body>
 </html>
-
+{% endblock %}
 
 
 
