--- a/mainPage/templates/mainPage/basePage.html
+++ b/mainPage/templates/mainPage/basePage.html
@@ -51,7 +51,7 @@
                     </td>
                     <td>
                         <ul>
-                        <li>Lost&Found</li>
+                        <li><a href="{% url 'lostAndFound:list' %}">LOST & FOUND</a></li>
                         <li>부동산</li>
                         </ul>
                     </td>
