Lost and Found 통합 2

--- a/mainPage/templates/mainPage/basePage.html
+++ b/mainPage/templates/mainPage/basePage.html
@@ -94,7 +94,7 @@
             </ul>
             <li>한동라이프</li>
             <ul>
-                <li>Lost&Found</li>
+                <li><a href="{% url 'lostAndFound:list' %}">LOST & FOUND</a></li>
                 <li>부동산</li>
             </ul>
             <li>한동정보</li>
