--- a/mainPage/templates/mainPage/mainPageTemplate.html
+++ b/mainPage/templates/mainPage/mainPageTemplate.html
@@ -7,7 +7,7 @@
         </title>
     </head>
     <body>
-        <img src="{% static 'mainPage/images/HUS_Logo_1.png' %}" class="Logo"/>
+        <a href="{% url 'mainPage:mainPage' %}"><img src="{% static 'mainPage/images/HUS_Logo_1.png' %}" class="Logo"/></a>
         <div class="search">
             <input type="text" value="검색창">
             <button>검색버튼</button>
@@ -37,7 +37,7 @@
                     <td>
                         <ul>
                         <li><a href="{% url 'boards:list' %}">감자밭</a></li>
-                        <li>천마지</li>
+                        <li><a href="{% url 'skyLake:skyLakeList' %}">천마지</a></li>
                         <li>대나무숲</li>
                         <li>활주로</li>
                         </ul>
