--- a/bamboo/templates/bamboo/boardDetail.html
+++ b/bamboo/templates/bamboo/boardDetail.html
@@ -12,7 +12,7 @@
     <body>
         <h2 class="boardName"> 대나무숲 </h2>
         <h4 class="boardName"> 100% 익명보장, 익명게시판입니다.</h4>
-        {{post.update_hitCount}} <!--조회수 증가하는 함수-->
+        <div class="functionCall">{{post.update_hitCount}}</div> <!--조회수 증가하는 함수-->
        <div>
             <h3 class="title"> {{object.title}} </h3>
             <p class="name"> 
