--- a/mainPage/templates/mainPage/basePage.html
+++ b/mainPage/templates/mainPage/basePage.html
@@ -37,7 +37,7 @@
                         <ul>
                         <li><a href="{% url 'boards:list' %}">감자밭</a></li>
                         <li><a href="{% url 'skyLake:skyLakeList' %}">천마지</a></li>
-                        <li>대나무숲</li>
+                        <li><a href="{% url 'bamboo:bambooList' %}">대나무숲</a></li>
                         <li>활주로</li>
                         </ul>
                     </td>
@@ -82,7 +82,7 @@
             <ul>
                 <li><a href="{% url 'boards:list' %}">감자밭</a></li>
                 <li><a href="{% url 'skyLake:skyLakeList' %}">천마지</a></li>
-                <li>대나무숲</li>
+                <li><a href="{% url 'bamboo:bambooList' %}">대나무숲</a></li>
                 <li>활주로</li>
             </ul>
             <li>한동장터</li>
