--- a/skyLake/templates/skyLake/boardDetail.html
+++ b/skyLake/templates/skyLake/boardDetail.html
@@ -12,7 +12,7 @@
     <body>
         <h2 class="boardName"> 천마지 </h2>
         <h4 class="boardName"> 사랑을 속삭이는 정원 천마지입니다. </h4>
-        {{post.update_hitCount}} <!--조회수 증가하는 함수-->
+        <div class="functionCall">{{post.update_hitCount}}</div> <!--조회수 증가하는 함수-->
        <div>
             <h3 class="title"> {{object.title}} </h3>
             <p class="name"> 
