--- a/bamboo/templates/bamboo/boardDetail.html
+++ b/bamboo/templates/bamboo/boardDetail.html
@@ -25,7 +25,7 @@
             <p class="date"> {{object.pubDate}}</p>
             <div style="text-align: right;">
         </div>
-            <p> {{object.content}} </p>
+            <p> {{object.postEditor | safe }} </p>
         <div class="buttons">
             <button>좋아요</button>
             <button>싫어요</button>
