--- a/bamboo/templates/bamboo/boardCreate.html
+++ b/bamboo/templates/bamboo/boardCreate.html
@@ -1,10 +1,10 @@
-{% extends 'mainPage/basePage.html' %}
+{% extends 'mainPage/basePageNobottom.html' %}
 {% block content %}
 <!DOCTYPE html>
 <html>
     <head>
     {% load static %}
-    <link rel="stylesheet" type="text/css" href="{% static 'bamboo/Style.css'%}">   
+    <link rel="stylesheet" type="text/css" href="{% static 'bamboo/Style.css'%}">
         <meta charset="UTF-8">
         <title> boardCreate </title>
     </head>
@@ -13,13 +13,18 @@
         <h2 class="boardName"> 대나무숲 </h2>
         <h4 class="boardName"> 100% 익명보장, 익명게시판입니다. </h4>
         <form method="POST">
-            {% csrf_token %}
-            <table>
-                {{ form.media }}
-                {{ form.as_table }}
-            </table>
-            <input class="fixed submit" type="Submit" value="Submit">
-        </form>
+                <table>
+                    {% csrf_token %}
+                    {% for field in form %}
+                    <tr>
+                        {{ form.media }}
+                        <td>{{ field.label_tag }}</td>
+                        <td> {{ field }} </td>
+                    </tr>
+                    {% endfor %}
+                </table>
+                <input class="fixed submit" type="Submit" value="Submit">
+            </form>
     </body>
 
 <html>
