--- a/skyLake/templates/skyLake/boardCreate.html
+++ b/skyLake/templates/skyLake/boardCreate.html
@@ -1,4 +1,4 @@
-{% extends 'mainPage/basePage.html' %}
+{% extends 'mainPage/basePageNobottom.html' %}
 {% block content %}
 <!DOCTYPE html>
 <html>
@@ -13,9 +13,15 @@
         <h2 class="boardName"> 천마지 </h2>
         <h4 class="boardName"> 사랑을 속삭이는 정원 천마지입니다. </h4>
         <form method="POST">
-            {% csrf_token %}
             <table>
-                {{ form.as_table }}
+                {% csrf_token %}
+                {% for field in form %}
+                <tr>
+                    {{ form.media }}
+                    <td>{{ field.label_tag }}</td>
+                    <td> {{ field }} </td>
+                </tr>
+                {% endfor %}
             </table>
             <input class="fixed submit" type="Submit" value="Submit">
         </form>
