--- a/skyLake/templates/skyLake/boardDetail.html
+++ b/skyLake/templates/skyLake/boardDetail.html
@@ -32,8 +32,8 @@
         </div>
             <p> {{object.postEditor | safe }} </p>
         <div class="buttons">
-            <button>좋아요</button>
-            <button>싫어요</button>
+            <button><a href="{% url 'skyLake:postLike' pk=object.pk %}">좋아요{{ likeCount }}</a></button>
+            <button><a href="{% url 'skyLake:postDislike' pk=object.pk %}">싫어요{{ dislikeCount }}</a></button>
             <button>신고</button>
         </div>
 
